feat: rename `dueAt` to `scheduledAt` and allow nullable `priority`
- Renamed `dueAt` to `scheduledAt` across database, API contracts, clients, and internal logic.
- Updated database schema to remove `priority` default and allow nullable values.
- Adjusted UI, clients, and task logic to support nullable `priority` and the renamed `scheduledAt` field.
- Removed all `dueAt` references and ensured proper handling of `scheduledAt` in filters, notifications, and recurrence logic.
- Updated and added tests to validate renamed fields, nullable `priority` scenarios, and migration correctness.